# AI_legal_application

./: README.md  helper.py  judiciary.db  pyproject.toml  requirements.txt  run copy.py  run.py  sent2vec_adapter.py  test.ipynb
app/: main.py  main2.py
app/models/: db.py  schemas.py
app/routers/: analysis.py  dashboard.py  upload.py
app/services/: analytics.py  chroma_store.py  embeddings.py  llm_reasoning.py  nlp_pipeline.py  statute_identifier.py  translation.py
app/utils/: auth.py  doc_parser.py
chroma_data/: chroma.sqlite3
dashboard/: app.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  index.js
frontend/src/api/: client.js  client2.js  client_pre.js
frontend/src/components/: AnalysisResult.jsx  CaseCard.jsx  CaseCard_pre.jsx  LawsChart.jsx  Navbar.jsx  ProtectedRoute.jsx  Sidebar.jsx  TimelineView.jsx
frontend/src/context/: AuthContext.jsx  ToastContext.jsx
frontend/src/pages/: CaseView.jsx  Dashboard.jsx  Dashboard1.jsx  Login.jsx  Register.jsx  caseview1.jsx
model/: model.py
statute_identification/configs/: data_path.json  hyperparams.json
