[project]
name = "legal-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.14.0",
    "aiosqlite>=0.22.1",
    "anthropic>=0.111.0",
    "argon2-cffi>=25.1.0",
    "chromadb>=1.5.9",
    "fastapi>=0.138.0",
    "groq>=1.4.0",
    "httpx>=0.28.1",
    "networkx>=3.6.1",
    "npm>=0.1.1",
    "npx>=0.1.8",
    "pandas>=3.0.3",
    "passlib>=1.7.4",
    "pdfplumber>=0.11.10",
    "pillow>=12.2.0",
    "plotly>=6.8.0",
    "pydantic>=2.13.4",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "sentencepiece>=0.2.1",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.58.0",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "uvicorn>=0.49.0",
]
